agrupando en carpetas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MiFragmentTabhost"></activity>
-        <activity android:name=".MiRecyclerView" />
+        <activity android:name=".FragmentTabHost.MiFragmentTabhost"></activity>
+        <activity android:name=".mireciclerview.MiRecyclerView" />
         <activity android:name=".Permisos" />
-        <activity android:name=".Multimedia2" />
-        <activity android:name=".Multimedia" />
-        <activity android:name=".Intenciones" />
+        <activity android:name=".Multimedia.Multimedia2" />
+        <activity android:name=".Multimedia.Multimedia" />
+        <activity android:name=".Intenciones" android:screenOrientation="landscape"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
